--- a/Traduccion-formulario/index.html
+++ b/Traduccion-formulario/index.html
@@ -38,6 +38,8 @@
     </div> 
     <!-- /container -->
 
-    <script  type='text/javascript' src='js/main.js'></script>
+    <script type='text/javascript' src='js/main.js'>
+      
+    </script>
   </body>
 </html>
