--- a/Bicis-locas/index.html
+++ b/Bicis-locas/index.html
@@ -16,7 +16,7 @@
   <body>
     <section class="form-container">
       <div class="container-fluid">
-        <form class="form-signup">
+        <form class="form-signup" onsubmit="return validateForm()">
           <h2 id="form-signup-heading">
             Bicis Locas
           </h2>
@@ -66,7 +66,7 @@
       </div>  
     </section>
     <!-- /container -->
-    <script type='text/javascript' src='js/main.js'></script>
+    <script type='text/javascript' src='js/principal.js'></script>
     <script type='text/javascript' src='js/donottouchthisfile.js'></script>
   </body>
 </html>
